--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-chatterd/cert/chatterd.key
+# mac
+.DS_Store
+
+# node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# env / secrets
+.env
+*.key
+
+# optional: ignore all cert folders
+cert/
