Update backend: switch to server.js and config fixes

--- a/chatterd/.env
+++ b/chatterd/.env
@@ -1,3 +1,6 @@
 PORT=8000
-DATABASE_URL=postgresql://chatter:chatchatt@127.0.0.1:5432/chatterdb
-
+PGHOST=localhost
+PGPORT=5432
+PGDATABASE=chatterdb
+PGUSER=chatter
+PGPASSWORD=chattchatt
